# Rawhide_Old

./: README.md
RMH_CODE/: DualAdmittanceControl_RR_pyKDL_SpaceNav_11_27.py  Dual_Arm_TBD.py  Dual_Arm_TBD_2.py  RGBPicker.py  Rvizjointpublishertest.py  TBD_Demo1.py  TBD_Demo2.py  TBD_Rawhide_playbackonlydemo.py  TeachingByDemonstration.py  bouncyball.webm  cabinet_simple1.STL  cabinet_simple_1_30.STL  cabinet_simple_1_30_2.STL  cabinet_test.urdf  collision_detection_FH.py  collision_detection_RMH.py  color_tracking_1_29.py  color_tracking_2_1_29.py  colortracking.py  colortracking3_1_29.py  command_dio.py  cylinder_wire.urdf  dual_arm_rviz_config.rviz  jasonhw.m  log1_0.txt  log1_1.txt  log1_2.txt  log_0.txt  log_1.txt  log_2.txt  myworld  object.urdf  objecttracking.py  positionfile  pybullet_dualsawyers_urdf_test.py  rmh_recorder.py  rrt_lavalle.py  sethigh.bash  sphere.urdf  visualobj.py
RMH_CODE/TBD_images/: TBD_Images.odp
RMH_CODE/TBD_logs/: filenamelist.txt  log_1.txt  log_3.txt  logdemo_0.txt  logdemo_1.txt
RMH_CODE/TBD_playback_logs /: filenamelist.txt  log_0.txt  log_2.txt
catkin_ws/install/: .rosinstall  _setup_util.py  setup.sh
catkin_ws/src/RTKtest/: sawyer_rmh2.urdf.xml  (+3 more)
ros_ws/: .intera_captain.sh.swp  intera_captain.sh  intera_poirot.sh  intera_robot1.sh  intera_robot2.sh  setsignal.bash
ros_ws/src/: .rosinstall  .rosinstall.bak  RMH_Rvislaunchtest  RMH_launch.launch  RMH_launch_2.launch  frames.gv
ros_ws/src/wire_harness_rmh/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/wire_harness_rmh/cfg/: SawyerJointSpringsExample.cfg
(+109 files in other folders)
