<?xml version="1.0"?>
<package>
  <name>wire_harness_rmh</name>
  <version>5.2.0</version>
  <description>
    ROS package for use of Sawyer for wire harness project
  </description>

  <maintainer email="rachelmh@mit.edu">
    Rachel Hoffman
  </maintainer>
  <license>Apache 2.0</license>
  <url type="website">mit.edu</url>

  <author>Rachel Hoffman</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>intera_motion_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>intera_interface</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>intera_motion_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>rospy_message_converter</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>intera_interface</run_depend>


</package>